# vrock.libs

./: .clang-format  .gitattributes  .gitignore  .gitmodules  CMakeLists.txt  README.md  meson.build  meson_options.txt  vcpkg.json  vrocklibs.wrap
docs/: .gitignore  CMakeLists.txt  Doxyfile.in  conf.py  copy.py  index.rst  index.rst.in  meson.build  setup.py
docs/_static/css/: custom.css
docs/api/: log.rst  security.rst  ui.rst  utils.rst
docs/api/log/: Logger.rst  Sink.rst
docs/api/security/: encryption.rst  hash.rst  random.rst
docs/api/ui/: Application.rst  FileDialog.rst  Image.rst  KeyCode.rst
docs/api/utils/: ByteArray.rst  CoroutineHelper.rst  FutureHelper.rst  Lazy.rst  List.rst  ScopedTimer.rst  Task.rst  Timer.rst
docs/docs/: conf.py
docs/examples/: log.rst  utils.rst
docs/examples/log/: BasicExample.rst
docs/examples/utils/: GeneratorExample.rst  LazyExample.rst  TaskExample.rst  TimersExample.rst
docs/pages/: howtouse.rst  howtouse.rst.in  log.rst
docs/pages/log/: CustomFormatting.rst
docs/pages/utils/: ByteArray.rst  ByteArray.rst.in
http/src/: CMakeLists.txt  HttpMessage.ixx  HttpParser.ixx  HttpServer.ixx  Interceptor.ixx  Path.ixx  Sockets.ixx  TCPServer.ixx  Url.ixx
http/src/llhttp/: api.c  http.c  llhttp.c
log/src/: CMakeLists.txt  Logger.cpp  Logger.ixx  meson.build
log/src/include/vrock/: log.hpp
log/src/include/vrock/log/: AnsiColors.hpp  ConsoleSink.hpp  ExecutionContext.hpp  LogLevel.hpp  LogMessage.hpp  Logger.hpp  LoggerStorage.hpp  Message.hpp  PatternFormatter.hpp  Sink.hpp  ThreadingPolicy.hpp
log/src/include/vrock/log/FlagFormatters/: AlignFormatters.hpp  AnsiFormatters.hpp  (+5 more)
log/src/src/: AnsiColors.cpp  Logger.cpp  LoggerStorage.cpp  PatternFormatter.cpp  main.cpp
log/src/src/FlagFormatters/: AlignFormatter.cpp  AlignFormatters.cpp  AnsiFormatter.cpp  AnsiFormatters.cpp  GeneralFormatters.cpp  PatternFormatter.cpp  PatternFormatters.cpp  SourceFormatter.cpp  SourceFormatters.cpp  TimeFormatters.cpp
log/src/src/Sinks/: ConsoleSinks.cpp  FileSinks.cpp  Sink.cpp
log/tests/: CMakeLists.txt  Logger.test.cpp
log/tests/FlagFormatters/: AlignFormatter.test.cpp  AlignFormatters.test.cpp  AnsiColorFormatters.test.cpp  GeneralFormatters.test.cpp  SourceFormatters.test.cpp  TimeFormatters.test.cpp
pdf/examples/: CMakeLists.txt  example_001.cpp  example_ByteArray.cpp  example_renderer.cpp  meson.build
pdf/examples/with_ui/: CMakeLists.txt  DocumentStructureWidget.ixx  DocumentViewWidget.ixx  Globals.ixx  RenderHelper.ixx  main.cpp
pdf/src/: CMakeLists.txt  ColorSpace.cpp  ColorSpace.ixx  Math.ixx  PDFDataStructures.ixx  PDFDocument.cpp  PDFDocument.ixx  PDFEncryption.cpp  PDFEncryption.ixx  PDFPageObjects.ixx
pdf/src/include/vrock/pdf/: PDFDocument.hpp  typedefs.hpp
pdf/src/parser/: BaseParser.cpp  BaseParser.ixx  ColorSpace.cpp  ContentStreamParser.cpp  ContentStreamParser.ixx  PDFFilter.cpp  PDFObjectParser.cpp  PDFObjectParser.ixx  PDFObjects.cpp  PDFObjects.ixx  PDFPageObjects.cpp  ZLibHelper.hpp
pdf/src/src/: PDFDocument.cpp
pdf/src/src/parser/: BaseParser.cpp  CMapParser.cpp  ContentStreamParser.cpp  PDFObjectParser.cpp
pdf/src/src/structure/: Colorspaces.cpp  Font.cpp  Functions.cpp  PDFContext.cpp  PDFDataStructures.cpp  PDFEncryption.cpp  PDFFilters.cpp  PDFImage.cpp  PDFObjects.cpp  PDFPageTree.cpp  PDFStreams.cpp  Rectangle.cpp  RenderableObject.cpp  zlib_helper.hpp
pdf/src/structure/: Image.ixx  PDFPageTree.cpp  PDFPageTree.ixx  RenderableObject.cpp  RenderableObject.ixx
pdf/tests/: CMakeLists.txt  PDFDecryption.test.cpp
pdf/tests/parser/: BaseParser.test.cpp  ContentStreamParser.Text.test.cpp  ContentStreamParser.test.cpp  Helper.hpp  PDFFilter.test.cpp  PDFObjectParser.test.cpp
pdf/tests/structure/: Functions.test.cpp  Image.test.cpp  PDFFilter.test.cpp
security/examples/: CMakeLists.txt  example_AES.cpp  example_MD5.cpp  example_Random.cpp  example_rc4.cpp  example_sha2.cpp
security/src/: CMakeLists.txt  encryption.cpp  encryption.ixx  hash.cpp  hash.ixx  meson.build  random.cpp  random.ixx
security/src/encryption/: aes.ixx  encryption.ixx  rc4.ixx
security/src/include/vrock/: security.hpp
security/src/include/vrock/security/: encryption.hpp  hash.hpp  random.hpp  typedefs.hpp
security/src/src/: encryption.cpp  hash.cpp  random.cpp
security/tests/: CMakeLists.txt
security/tests/encryption/: aes.test.cpp  rc4.test.cpp
security/tests/hash/: MD5.test.cpp  SHA2.test.cpp
ui/examples/: CMakeLists.txt  example_CloseDialog.cpp  example_FileDialog.cpp  example_ModalDialog.cpp  example_RenderImage.cpp  example_SimpleApp.cpp  example_SimpleButton.cpp  example_SimpleButton.cpp.old
ui/src/: Application.cpp  Application.ixx  CMakeLists.txt  FileDialog.cpp  FileDialog.ixx  Image.cpp  Image.ixx  KeyCode.ixx  Widgets.cpp  Widgets.ixx  meson.build
ui/src/imgui_theme/: spectrum.cpp
ui/src/include/vrock/: ui.hpp
ui/src/include/vrock/ui/: Application.hpp  Color.hpp  Point.hpp
ui/src/src/: Application.cpp  Color.cpp
ui/src/src/RenderBackends/: OpenGLBackend.cpp  X11RenderBackend.cpp
ui/src/src/gui/: Panel.cpp  TextBlock.cpp  Window.cpp
ui/src/src/gui/native/: Canvas.cpp  Context.cpp  NativeVisual.cpp  NativeWindow.cpp  RasterVisual.cpp
utils/examples/: CMakeLists.txt  example_ByteArray.cpp  example_Coroutines.cpp  example_Generator.cpp  example_Lazy.cpp  example_Task.cpp  example_Timer.cpp  meson.build
utils/src/: ByteArray.ixx  CMakeLists.txt  Concepts.ixx  CoroutineHelpers.ixx  FutureHelper.ixx  Generator.ixx  Lazy.ixx  List.ixx  Queryable.hpp  Task.ixx  Timer.ixx  await.ixx  meson.build  utils.ixx  vrock.utils.ByteArray.ixx  vrock.utils.List.ixx  when_all.ixx
utils/src/include/vrock/: utils.hpp
utils/src/include/vrock/utils/: ByteArray.hpp  CoroutineHelpers.hpp  FutureHelper.hpp  Generator.hpp  Lazy.hpp  List.hpp  NumberHelper.hpp  SpanHelpers.hpp  Task.hpp  Timer.hpp
utils/src/src/: ByteArray.cpp  SpanHelper.cpp
utils/tests/: ByteArray.test.cpp  CMakeLists.txt  FutureHelpers.test.cpp  Lazy.test.cpp  Task.test.cpp  Timer.test.cpp  meson.build
(+76 files in other folders)
