
# ByteArray Example
example_ByteArray = executable(
    'example_ByteArray', 'example_ByteArray.cpp',
    dependencies: vrockutils_dep
)

# ByteArray Example
example_Coroutines = executable(
    'example_Coroutines', 'example_Coroutines.cpp',
    dependencies: vrockutils_dep
)

# ByteArray Example
example_Lazy = executable(
    'example_Lazy', 'example_Lazy.cpp',
    dependencies: vrockutils_dep
)